# compiler

./: CMakeLists.txt  README.md  test.semp  text.semp
.github/workflows/: test.yml
docs/: grammar.md
include/: lexer.hpp  parser.hpp  token.hpp
src/: lexer.cpp  main.cpp  parser.cpp
tests/: lexer_test.cpp
